Updated student bio

--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
+<!--Activity 1: Basic HTML Bio-->
 <!DOCTYPE html>
 <html>
-<head>
+    <body>
+    <!--Site Header-->
     <Title>Student Bio</Title>
-
+    
+    </header>
+<!--Section 1: Bio-->
     <h1>Student Bio</h1>
 
     <h2>Jasmine Fitts</h2>
@@ -13,13 +17,15 @@
         
     </p>
 
-         <p>I currently work as a case manager for Durham County DSS. I determine eligibility for Family and Children's Medicaid but I am looking to make a career change, hence why I decided to enroll this bootcamp. </p>
+         <p>I currently work as a case manager for Durham County DSS. I determine eligibility for Family and Children's Medicaid but I am looking to make a career change,hence why I decided to enroll this bootcamp. </p>
          <br>
+<!--Section 2: Contact Info-->
     <h2>Contact Info</h2>
         <ul>
-            <li>Email:</li>
-            <li>Github: </li>
-            <li>Portfolio:</li>
+            <li><strong>Email: </strong><a href="fitts.jasmine@gmail.com">fitts.jasmine@gmail.com</a></li>
+            <li><strong>Github: </strong><a href="https://github.com/jasmine-fitts">jasmine-fitts</a> </li>
+            <li><strong>Portfolio: </strong><a href="google.com">coming soon</a></li>
         </ul>
-</head>
+
+</body>
 </html>
